# proton-crypto-rs

./: .gitignore  Cargo.toml  README.md  SECURITY.md
gopenpgp-sys/: CHANGELOG.md  Cargo.toml  build.rs
gopenpgp-sys/go/: clone.go  common.h  decrypt.go  encrypt.go  go.mod  go.sum  gohandles.go  gopenpgp.go  gopenpgp.h  keys.go  lib.go  sign.go  verify.go
gopenpgp-sys/src/: armor.rs  constants.rs  decryption.rs  encryption.rs  ext_buffer.rs  go.rs  keys.rs  lib.rs  signing.rs  streaming.rs  verification.rs
gopenpgp-sys/src/tests/: decryption.rs  encryption.rs  keys.rs  signing.rs  verification.rs
proton-crypto/: CHANGELOG.md  Cargo.toml
proton-crypto-account/: CHANGELOG.md  Cargo.toml
proton-crypto-account/src/: constants.rs  errors.rs  lib.rs  salts.rs
proton-crypto-account/src/contacts/: cards.rs  mod.rs
proton-crypto-account/src/crypto/: key_export.rs  key_import.rs  mod.rs
proton-crypto-account/src/keys/: address_keys.rs  api_keys.rs  device_keys.rs  mail_public_keys.rs  mod.rs  organization_keys.rs  pinned_keys.rs  public_address_keys.rs  recipient.rs  signed_key_list.rs  user_keys.rs
proton-crypto-account/src/recovery/: mod.rs
proton-crypto-account/tests/: contact_cards.rs  keys.rs  mail_keys.rs  recipient.rs  skl.rs
proton-crypto-account/tests/data/: pub_key_0.armor  pub_key_1.armor  pub_key_2.armor
proton-crypto-subtle/: CHANGELOG.md  Cargo.toml
proton-crypto-subtle/src/: aead.rs  errors.rs  hkdf.rs  lib.rs
proton-crypto-subtle/tests/: aead.rs  hkdf.rs
proton-crypto/examples/: encrypt_decrypt.rs
proton-crypto/src/: keytransparency.rs  lib.rs  srp.rs  utils.rs
proton-crypto/src/crypto/: armor.rs  decrypt.rs  encrypt.rs  keys.rs  mod.rs  sign.rs  verify.rs
proton-crypto/src/go/: armor.rs  decrypt.rs  encrypt.rs  keys.rs  mod.rs  pgp.rs  sign.rs  verify.rs
proton-crypto/src/go/pgp/: decrypt.rs  encrypt.rs  keys.rs  sign.rs  verify.rs
proton-crypto/src/rust/: mod.rs  pgp.rs  srp.rs
proton-crypto/src/rust/pgp/: armor.rs  decrypt.rs  encrypt.rs  keys.rs  sign.rs  verify.rs
proton-crypto/tests/: common.rs  crypto.rs  crypto_async.rs  srp.rs
proton-device-verification/: Cargo.toml
proton-device-verification/src/: errors.rs  lib.rs  pow.rs
proton-device-verification/tests/: pow.rs
proton-rpgp/: CHANGELOG.md  Cargo.toml  README.md
proton-rpgp/src/: armor.rs  decrypt.rs  decryption.rs  encrypt.rs  encryption.rs  errors.rs  key.rs  lib.rs  profile.rs  sign.rs  signature.rs  types.rs  verify.rs
proton-rpgp/src/decrypt/: message.rs
proton-rpgp/src/encrypt/: message.rs  observe.rs
proton-rpgp/src/key/: certifications.rs  component.rs  generation.rs  info.rs  modification.rs  preferences.rs  selection.rs
proton-rpgp/src/profile/: keygen.rs  s2k.rs  settings.rs
proton-rpgp/src/sign/: reader.rs
proton-rpgp/src/signature/: context.rs  core.rs  key.rs  message.rs  text.rs
proton-rpgp/src/verify/: reader.rs
proton-rpgp/test-data/keys/: locked_private_key_v6.asc  locket_private_key_v4_rsa_1023.asc  private_key_rsa_512.asc  private_key_v4.asc  private_key_v4_forwardee.asc  private_key_v4_no_user_id.asc  private_key_v4_reformatted.asc  private_key_v4_sign_only.asc  private_key_v6.asc  private_key_v6_detached_sig_message.asc  private_key_v6_pqc.asc  public_key_v4.asc  public_key_v4_expired.asc  public_key_v4_multi_user_id.asc  public_key_v4_multi_user_id_revoked.asc  public_key_v4_revoked.asc  public_key_v4_revoked_valid.asc  public_key_v4_subkey_expired_binding_signature.asc  public_key_v4_subkey_revoked.asc  public_key_v4_zero_expiration.asc  public_key_v6.asc
proton-rpgp/test-data/messages/: encrypted_message_v4.asc  encrypted_message_v4_compressed.asc  encrypted_message_v4_forwarded.asc  encrypted_message_v4_multi_key_packets.asc  encrypted_message_v4_password.asc  encrypted_message_v4_sign_only.asc  encrypted_message_v4_text.asc  encrypted_message_v4_wildcard.asc  encrypted_message_v6.asc  encrypted_message_v6_detached_signature.asc  encrypted_message_v6_password.asc  expected_decrypted_message_v4_mail.expected  signed_cleartext_message_v4.asc  signed_cleartext_message_v4_escaped.asc  signed_message_v4.asc  signed_message_v4_compressed.asc  signed_message_v4_reformatted_key.asc  signed_message_v4_text.asc
proton-rpgp/test-data/signatures/: signature_multiple.asc  signature_v4.asc  signature_v4_corrupt.asc  signature_v4_rsa_512.asc  signature_v4_text.asc  signature_v6.asc  signature_v6_for_message.asc  signature_v6_pqc.asc
proton-rpgp/tests/: armor.rs  decrypt.rs  encrypt.rs  key.rs  message.rs  sign.rs  utils.rs  verify.rs
proton-srp/: CHANGELOG.md  Cargo.toml  LICENSE
proton-srp/examples/: srp_round_trip.rs
proton-srp/resources/: server_public_key.asc
proton-srp/src/: errors.rs  lib.rs  pgp_modulus.rs  pmhash.rs
proton-srp/src/srp/: client.rs  core.rs  mod.rs  server.rs
proton-srp/src/tests/: pgp_modulus.rs  srp.rs
proton-srp/tests/: pmhash.rs  srp.rs
