[package]
name = "proton-crypto-account"
version = "0.13.0"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
base64 = { workspace = true }
derive_more = { version = "2.0", features = ["try_from"] }
futures = { version = "0.3.31", features = ["async-await"] }
hex = { workspace = true }
proton-crypto = { workspace = true, default-features = false }
serde = { workspace = true }
serde_with = "3.12.0"
serde_repr = "0.1"
serde_json = "1.0.137"
thiserror = { workspace = true }
zeroize = { workspace = true }
rusqlite = { version = "0.32.1", features = [
    "bundled",
    "chrono",
    "functions",
    "trace",
    "uuid",
], optional = true}
facet = { workspace = true, optional = true}

[lints]
workspace = true

[features]
default = ["rustpgp"]
sql = ["dep:rusqlite"]
rustpgp = ["proton-crypto/rustpgp"]
gopgp = ["proton-crypto/gopgp"]
facet = ["dep:facet", "proton-crypto/facet"]
