[package]
name = "proton-crypto-subtle"
version = "0.1.0"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
aes-gcm = "0.10.3"
rand = { workspace = true }

[lints]
workspace = true

[features]
default = []
legacy = []
