[package]
name = "proton-crypto"
version = "0.6.0"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
gopenpgp-sys = { workspace = true }
proton-srp = { workspace = true, default-features = false, registry = "proton" }
thiserror = { workspace = true }
serde = { version="1", features = ["derive"]}
hex = { workspace = true }
parking_lot = "0.12"
subtle = "2.5.0"
rand = { workspace = true }

[dev-dependencies]
smol = "2.0.0"

[lints]
workspace = true
