[package]
name = "proton-crypto"
version = "0.7.1"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
gopenpgp-sys = { workspace = true, optional = true }
proton-srp = { workspace = true }
thiserror = { workspace = true }
serde = { version="1", features = ["derive"]}
hex = { workspace = true }
parking_lot = "0.12"
subtle = "2.5.0"
rand = { workspace = true }
facet = { workspace = true, optional = true}

[dev-dependencies]
smol = "2.0.0"

[features]
default = ["gopgp"]
gopgp = ["dep:gopenpgp-sys"]
facet = ["dep:facet"]

[lints]
workspace = true
