[package]
name = "proton-device-verification"
version = "0.1.0"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
base64 = { workspace = true }
thiserror = { workspace = true }
sha2 = "0.10.8"
curve25519-dalek = "4.1.2"
argon2 = "0.5.3"
base64ct = "=1.6" #Force base64ct 1.6 in argon2
hmac = "0.12.1"

[lints]
workspace = true

[profile.test]
opt-level = 3
