[package]
name = "proton-rpgp"
version = "0.1.0"
edition.workspace = true
license = "MIT"
authors.workspace = true

[dependencies]
pgp = { version = "0.16.0", default-features = false, features = ["draft-pqc"], git = "https://github.com/rpgp/rpgp.git", rev = "63cbd711aa3e32bf310eda8a23539509837352a8"}
thiserror = "2"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "std",
] }
rsa = "0.9.8"
rand = "0.8.5"
sha2 = { version = "0.10.6", features = ["oid"] }
hex = "0.4"
zeroize = { version="1.8", features = ["zeroize_derive"]}
smallvec = "1.10.0"

[features]
default = []
# Enables assembly based optimizations
asm = ["pgp/asm"]
# Allows building for wasm
wasm = ["pgp/wasm"]

[lints]
workspace = true
