[package]
name = "proton-rpgp"
version = "0.1.0"
edition.workspace = true
license = "MIT"
authors.workspace = true

[dependencies]
pgp = { version = "0.17.0", default-features = false, features = ["draft-pqc", "malformed-artifact-compat"]}
thiserror = "2"
chrono = { version = "0.4.39", default-features = false, features = [
    "clock",
    "std",
] }
rsa = "0.9.8"
rand = "0.8.5"
sha2 = { version = "0.10.6", features = ["oid"] }
hex = "0.4"
zeroize = { version="1.8", features = ["zeroize_derive"]}
smallvec = "1.10.0"
kem = "=0.3.0-pre.0" # pinned to avoid automatic update in downstream project. 
web-time = { workspace = true }

[features]
default = []
# Enables assembly based optimizations
asm = ["pgp/asm"]
# Allows building for wasm
wasm = ["pgp/wasm"]

[lints]
workspace = true
