[package]
name = "proton-srp"
version = "0.7.0"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
bcrypt = "0.15.1"
crypto-bigint = { version = "0.5.5", features = ["zeroize"] }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
# Optional
pgp = { version = "0.14.2", optional = true }

[features]
default = ["pgpinternal"]
pgpinternal = ["dep:pgp"]

[profile.test]
opt-level = 3

[lints]
workspace = true
