[package]
name = "proton-srp"
version = "0.7.1"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
bcrypt = "0.17.1"
crypto-bigint = { version = "0.5.5", features = ["zeroize"] }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
# Optional
pgp = { version = "0.16.0", optional = true }

[features]
default = ["pgpinternal"]
pgpinternal = ["dep:pgp"]
custom_csprng = []

[profile.test]
opt-level = 3

[lints]
workspace = true
