[package]
name = "proton-srp"
version = "0.8.1"
edition.workspace = true
license = "MIT"
license-file = "LICENSE"
authors.workspace = true

[dependencies]
bcrypt = "0.17.1"
md5 = { package = "md-5", version = "0.10.6" }
crypto-bigint = { version = "0.5.5", features = ["zeroize"] }
hex = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }
# Optional
pgp = { version = "0.19.0", optional = true }

[features]
default = ["pgpinternal"]
pgpinternal = ["dep:pgp"]
custom_csprng = []

[profile.test]
opt-level = 3

[lints]
workspace = true
